# weather-briefing

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  README_ja.md  README_zh-Hans.md  env.example  locations.example.json  prek.toml  pyproject.toml  renovate.json  rss-sources.example.json
.github/workflows/: ci.yml  image.yml  lint.yml  release.yml  scan-all-commits.yml  unittest.yml
docker/: weather-briefing
docs/: design.md  jma-office-codes.md  notes.md  requirements.md
tests/: test_air_quality.py  test_allergen.py  test_any_llm_provider.py  test_api_client.py  test_bark_publisher.py  test_capabilities.py  test_cli.py  test_config.py  test_content_cleaners.py  test_deepseek_provider.py  test_geocoding.py  test_languages.py  test_llm.py  test_llm_fallback.py  test_openai_compatible_provider.py  test_persistence_locking.py  test_privacy.py  test_prompts.py  test_publishers.py  test_reference_data.py  test_regional_weather.py  test_render.py  test_service.py  test_service_status.py  test_sources.py  test_state.py  test_summarization.py  test_time_utils.py  test_weather_context.py
tests/fixtures/: locations.json
weather_briefing/: __init__.py  air_quality.py  allergen.py  api_client.py  capabilities.py  cli.py  config.py  content_cleaners.py  geocoding.py  languages.py  llm.py  localization.py  models.py  notifications.py  prompts.py  publishers.py  reference_data.py  regional_weather.py  registries.py  render.py  service.py  sources.py  state.py  time_utils.py  weather_context.py
weather_briefing/application/: __init__.py  collection.py  context_history.py  payloads.py  summarization.py
weather_briefing/composition/: __init__.py  providers.py
weather_briefing/config/: __init__.py  base.py  environment.py  feeds.py  files.py  http_headers.py  locations.py  settings.py
weather_briefing/data/: __init__.py  air_quality_guidance.json  allergen_guidance.json  bark.py  content_cleaning.json  geography.json  localization.json  notification_policy.txt  open_meteo_weather_codes.json  prompts.py  provider_defaults.json  resources.py  service_endpoints.py  system_prompt.txt  telegram_error_classification.json
weather_briefing/delivery/: __init__.py  bark.py  bark_crypto.py  base.py  renderers.py  stdout.py  telegram.py  telegram_reference.py
weather_briefing/geocoding/: __init__.py  base.py  composition.py  matching.py  nominatim.py  open_meteo.py  resolver.py
weather_briefing/llm/: __init__.py  any_llm.py  base.py  fallback.py  lazy.py  result.py  schema.py
weather_briefing/persistence/: __init__.py  diagnostics.py  health.py  locking.py  schema.py  serialization.py  store.py
weather_briefing/service_status/: __init__.py  collection.py  composition.py  documents.py  feed.py  flashcat.py  formatting.py  models.py  monitor.py  providers.py  statuspage.py
weather_briefing/service_status/providers/: __init__.py  _surface.py  anthropic.py  deepseek.py  kimi.py  openai.py
weather_briefing/weather/: __init__.py  base.py  composition.py  documents.py  jma.py  nea.py  open_meteo.py  open_meteo_reference.py  qweather.py  regional_errors.py
