[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "weather-briefing"
version = "0.3.0"
description = "Stateful, source-cited weather briefings"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "apscheduler>=3.11,<4",
  "beautifulsoup4>=4.13,<5",
  "feedparser>=6.0.11,<7",
  "httpx[socks]>=0.27,<1",
  "pendulum>=3.1,<4",
  "PyJWT[crypto]>=2.10,<3",
  "python-dotenv>=1.1,<2",
]

[dependency-groups]
dev = [
  "anyio>=4.11,<5",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.5,<1",
]

[project.scripts]
weather-briefing = "weather_briefing.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
anyio_mode = "auto"

[tool.uv]
required-version = "==0.11.28"

[tool.uv.build-backend]
module-root = ""

[[tool.uv.index]]
url = "https://pypi.flatt.tech/simple/"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
