[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "weather-briefing"
version = "3.1.2-dev"
description = "Stateful, source-cited weather briefings"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "any-llm-sdk>=1.19,<2",
  "apscheduler>=3.11,<4",
  "beautifulsoup4>=4.13,<5",
  "cryptography>=45,<50",
  "feedparser>=6.0.11,<7",
  "httpx[socks]>=0.27,<1",
  "markdown-it-py>=4.2,<5",
  "pendulum>=3.1,<4",
  "pydantic>=2.12,<3",
  "PyJWT>=2.10,<3",
  "python-dotenv>=1.1,<2",
]

[dependency-groups]
docker = [
  "any-llm-sdk[deepseek,openai,openrouter]>=1.19,<2",
]
dev = [
  "any-llm-sdk[all]>=1.19,<2",
  "anyio>=4.11,<5",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.5,<1",
]

[project.scripts]
weather-briefing = "weather_briefing.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
anyio_mode = "auto"

[tool.uv]
required-version = ">=0.11.28,<1"

[tool.uv.build-backend]
module-root = ""

[[tool.uv.index]]
url = "https://pypi.flatt.tech/simple/"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "D", "PERF", "FURB"]
ignore = [
  "W191",
  "E111",
  "E114",
  "E117",
  "D203",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "Q004",
  "COM812",
  "COM819",
]
preview = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
